--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,19 @@ kernel
 kernelmemfs
 mkfs
 .gdbinit
+
+*.aux
+*.dvi
+*.log
+*.pdf
+*.bbl
+*.blg
+*.fdb*
+*.fls
+*.out
+*.cut
+*.nav
+*.snm
+*.toc
+*.vrb
+*.DS_Store
